# Valdi

./: MODULE.bazel
apps/helloworld/standalone_app/: BUILD.bazel  README.md
apps/helloworld/standalone_app/android/: Main.kt
apps/helloworld/standalone_app/androidTest/: AndroidManifest.xml  LaunchTest.kt
bzl/: additional_dependencies.bzl  dependencies.bzl  workspace_init.bzl
bzl/android/: collect_android_assets.bzl
bzl/common/: nodejs_info.bzl
tools/ci/: test_exported_lib.sh
